# mimir

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.github/workflows/: mimir_ci.yml
.sqlx/: query-0ab1cf438aa8936ec41fe81455531fc61b4e6b43e189ee18283d60ea03551245.json  query-6334acfc1dcd8698df2eac225a689cbd6b3f31e04f9d595d048306cd33add322.json  query-9f40360c01dec931d4081cb07f2db7dbe2dc1195d99ed6e63c68281bd844efb2.json  query-a0f86930256a064be2c345e7c5d9073b53381d41107914441b4e341a989fa6e4.json  query-a2fa7cff2a873c7bbe9128553d7528b0207d70607cee96da76292dd91a263c9b.json  query-c56f872744de0d71b390891beada56ed18e884bcd235f090bd5601397a2332e5.json
app/: Cargo.toml
app/src/: application.rs  configuration.rs  initdb.rs  lib.rs  main.rs  telemetry.rs
app/tests/api/: blog_post_test.rs  health_check_test.rs  helpers.rs  main.rs
configuration/: base.toml  local.toml  production.toml
data/: Cargo.toml
data/src/: lib.rs  sqlite_repository.rs
domain/: Cargo.toml
domain/src/: blog.rs  domain_error.rs  hmac_secret.rs  lib.rs  markdown.rs  password.rs  repository.rs
domain/src/use_cases/: admin_use_case.rs  mod.rs  reader_use_case.rs
migrations/: 20240124163015_initial_db_setup.sql
web/: Cargo.toml
web/css/: InspiredGitHub-edit.css  InspiredGitHub.css  Solarized (dark)-edit.css  Solarized (dark).css  Solarized (light).css  base16-eighties.dark.css  base16-mocha.dark.css  base16-ocean.dark.css  base16-ocean.light.css  water.css
web/src/: lib.rs  session.rs  startup.rs  web_error.rs
web/src/api/: admin_login.rs  health_check.rs  mod.rs  new_post.rs  static.rs
web/src/pages/: admin_draft_page.rs  index_page.rs  login_page.rs  mod.rs  view_post_page.rs
web/templates/: admin_draft.html  base.html  index.html  login.html  reload.js  view_post.html
