[package]
name = "web"
version = "0.1.0"
edition = "2021"

[features]
dev-server = []

[dependencies]
domain = { path = "../domain" }

anyhow = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
tracing-actix-web = "0.7"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
rand = "0.8"
futures-util = "0.3.30"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
fake = "2"
serde_json = "1"
claim = "0.5"
